<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications_24dp"
        android:orderInCategory="200"
        android:title="@string/action_notifications"
        app:actionLayout="@layout/custom_notification_badge"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_broadcast_message"
        android:orderInCategory="300"
        android:title="@string/broadcast_message"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="400"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
            android:id="@+id/action_breakOut"
            android:orderInCategory="400"
            android:title="@string/break_out"
            app:showAsAction="never" />


    <item
            android:id="@+id/action_checkout"
            android:orderInCategory="400"
            android:title="@string/check_out"
            app:showAsAction="never" />

</menu>
