<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.daycare.daycareteacher.ui.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_8">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_40"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/login_logo_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Logo">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:layout_marginBottom="@dimen/space_8"
                app:cardCornerRadius="@dimen/space_10">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/space_20">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edtlPhoneNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginTop="@dimen/space_86"
                        android:layout_marginEnd="@dimen/space_8"
                        app:errorTextAppearance="@style/error_appearance"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_person_black_24dp"
                            android:drawablePadding="@dimen/space_8"
                            android:hint="@string/hint_email"
                            android:maxLength="35"
                            android:textSize="@dimen/space_16"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.emailId}"

                            />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnForgotPassSubmit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_24"
                        android:layout_marginTop="@dimen/space_24"
                        android:background="@drawable/rounded_bg"
                        android:foreground="?attr/selectableItemBackground"
                        android:backgroundTint="@color/colorPrimary"
                        android:onClick="@{viewModel::onClickSubmit}"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtlPhoneNo" />

                    <TextView
                        android:id="@+id/txt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginTop="@dimen/space_24"
                        android:layout_marginEnd="@dimen/space_8"
                        android:onClick="@{viewModel::onClickBack}"
                        android:text="@string/back_to_login"
                        android:textColor="@color/colorTextLight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassSubmit" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="@dimen/space_200"
            android:layout_height="@dimen/space_200"
            android:layout_marginTop="@dimen/space_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Logo">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/space_100"
                app:cardElevation="0dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="@dimen/space_86"
                        android:layout_height="@dimen/login_logo_space"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginTop="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_8"
                        android:layout_marginBottom="@dimen/space_8"
                        android:contentDescription="@string/login_logo"
                        app:layout_constraintBottom_toTopOf="@+id/Header"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_login_img" />

                    <com.daycare.daycareteacher.utill.MyMediumTextView
                        android:id="@+id/Header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space_32"
                        android:text="@string/forgot_password_txt"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/text_size_20"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>
</layout>