<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16">

        <com.daycare.daycareteacher.utill.MyMediumTextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/clock_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"/>

        <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_1"
                android:layout_marginStart="@dimen/space_4"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_4"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"/>


        <android.support.design.widget.TextInputEditText
                android:id="@+id/reasonEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_48"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/space_16"
                android:cursorVisible="false"
                android:hint="@string/reason"
                android:visibility="visible"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.578"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detailEditText"/>

        <com.daycare.daycareteacher.utill.MyMediumTextView
                android:id="@+id/detailEditText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/space_16"
                android:background="@null"
                android:cursorVisible="false"
                android:text="Please Clock In to start the day"
                android:textIsSelectable="false"
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:pinAnimationType="fromBottom"
                app:pinBackgroundDrawable="@drawable/rounded_bg_white"
                app:pinBackgroundIsSquare="true"
                app:pinCharacterSpacing="@dimen/space_4"

                tools:ignore="SpUsage" android:layout_marginTop="8dp"/>


        <Button
                android:id="@+id/submitPinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorBtnText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCCancel"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/reasonEditText"/>
        <Button
                android:id="@+id/btnCCancel"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/colorBtnCancel"
                android:foreground="?attr/selectableItemBackground"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorBtnText"
                app:layout_constraintEnd_toStartOf="@+id/submitPinBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/reasonEditText"/>

    </android.support.constraint.ConstraintLayout>
</layout>